objects/ssot__FulfillmentOrderPriceAdjTax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderPriceAdjAmount__c</fullName>
        <label>Fulfillment Order Price Adj Tax Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderProdPriceAdjId__c</fullName>
        <label>Fulfillment Order Product Price Adj</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderTaxId__c</fullName>
        <label>Fulfillment Order Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Order Price Adjustment Tax</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761212716_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderPriceAdjTax_Fulfillm_rel</label>
        <referenceTo>ssot__FulfillmentOrderProductPriceAdj__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderPriceAdjTax_Fulfillm_rel</relationshipLabel>
        <relationshipName>rel_1697761212716_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761212792_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderPriceAdjTax_Fulfillm_rel</label>
        <referenceTo>ssot__FulfillmentOrderTax__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderPriceAdjTax_Fulfillm_rel</relationshipLabel>
        <relationshipName>rel_1697761212792_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>